# farn-demo

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  CITATION.cff  README.md  demo commands summary.txt  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
bouncingBall/: .gitignore  README.md  farnDict  farnDict_3_params  resetDemo.bat  runDemo.bat
bouncingBall/template/: caseDict  caseDict.json  watchDict
farn/: .gitignore  00_exploreData.py  01_collectResults.py  02_statistics.py  README.md  farnDict  farnDict.json  hilbert_farnDict  index.html  lhs_farnDict  resetDemo.bat  runDemo.bat
farn/template/: OspSystemStructure.xml  SystemStructure.ssd  caseDict  caseDict.json  farn_demo_callGraph  parsed.caseDict  statisticsDict  watchDict  winjob.cmd
farn/templates/: microwave.css  mojomagnify.css  mojomagnify.js
house-demo/: .gitignore  README.md  farnDict
house-demo/src/: .gitignore
house-demo/template/: .gitignore  README.md  cleanUpTemplateFolder.bat  paramDict  resetDemo.bat  winjob.cmd
importSystemStructure/: README.md  farnDict  resetDemo.bat  runDemo.bat
importSystemStructure/template/: cleanUpTemplateFolder.bat
ospCaseBuilder/: .gitignore  README.md  caseDict  paramDict  resetDemo.bat  runDemo.bat
ospCaseBuilder-demo/: README.md  resetDemo.bat
