[project]
name = "farn-demo"
version = "0.4.1"
description = "Demo cases to get started with farn."
readme = "README.md"
requires-python = ">= 3.10, < 3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Frank Lumpitzsch", email = "frank.lumpitzsch@dnv.com" },
    { name = "Claas Rostock", email = "claas.rostock@dnv.com" },
    { name = "Seunghyeon Yoo", email = "seunghyeon.yoo@dnv.com" },
]
maintainers = [
    { name = "Claas Rostock", email = "claas.rostock@dnv.com" },
]
keywords = [
    "farn",
    "OSP",
    "fmi",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "farn>=0.4.1",
]

[project.urls]
Homepage = "https://github.com/dnv-opensource/farn"
Documentation = "https://dnv-opensource.github.io/farn/README.html"
Repository = "https://github.com/dnv-opensource/farn.git"
Issues = "https://github.com/dnv-opensource/farn/issues"
Changelog = "https://github.com/dnv-opensource/farn/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pyright>=1.1.392",
    "mypy>=1.14",
    "sourcery>=1.31",
    "pre-commit>=4.0",
    "pandas-stubs>=2.2",
    "types-psutil>=6.1",
    "types-lxml>=2024.12",
]

[tool.uv]
default-groups = [
    "dev",
]
native-tls = true

[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
]
mypy_path = "stubs"
files = [
    "farn",
    "importSystemStructure",
    "ospCaseBuilder",
]
exclude = [
    "^src/folder_to_be_excluded/",
]
check_untyped_defs = true
disable_error_code = [
    "misc",
    "import-untyped",
]


[tool.pyright]
stubPath = "stubs"
include = [
    "farn",
    "importSystemStructure",
    "ospCaseBuilder",
]
exclude = [
    "src/folder_to_be_excluded",
]

typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingParameterType = "error"
reportUnknownParameterType = "warning"
reportUnknownMemberType = "warning"                # consider to set to `false` if you work a lot with matplotlib and pandas, which are both not properly typed and known to trigger this warning
reportMissingTypeArgument = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnusedCallResult = "warning"
reportUnusedExpression = "warning"
reportMatchNotExhaustive = "warning"
reportShadowedImports = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
# Activate the following rules only locally and temporary, i.e. for a QA session.
# (For server side CI they are considered too strict.)
# reportMissingTypeStubs = true
# reportConstantRedefinition = "warning"
# reportImportCycles = "warning"
# reportImplicitStringConcatenation = "warning"
